# GaussianSplatting

./: .clang-format  .gitignore  CMakeLists.txt  DOKU_adriadri.txt  DxException.cpp  README.md  Time_Notes.txt  VertexShader.hlsl  main.cpp  requirements.txt  triangle-data-test.ply  vcpkg.json
assets/: Haus_file.ply  bycicle-test.ply  bycicle-test_asci.ply  file.ply  mercedes-without-camera-controll.ply  mercedes.ply  triangle-data-test.ply
compute/: compute.cpp  compute.hlsl
header/: Buffers.h  Camera.h  CameraMaths.h  D3D12Renderer.h  DepthSort.h  DrawWindow.h  DxException.h  GaussianRenderer.h  GeoGenerator.h  ImguiAdapter.h  PlyReader.h  Shader.h  Vertex.h  Window.h  WipImgui.h  d3dx12.h  math_extensions.h  matrix.h  matrix.inc  vector.h  vector.inc
shader/: ComputeShader.hlsl  GeometryShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
src/: Buffers.cpp  Camera.cpp  Compute.cpp  D3D12Renderer.cpp  DepthSort.cpp  DrawWindow.cpp  DxException.cpp  GaussianRenderer.cpp  GeoGenerator.cpp  ImguiAdapter.cpp  PlyReader.cpp  Shader.cpp  Window.cpp  WipImgui.cpp  imgui.cpp  main.cpp
